{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 1508,
  "lineage": "c1a69f8f-5410-0ce3-7c44-7fde240e147c",
  "resources": [
    {
      "module": "module.load_balancing",
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "allow_psc_global_access": false,
            "creation_timestamp": "2023-11-12T22:15:03.998-08:00",
            "id": "projects/adept-now-400809/regions/us-central1/forwardingRules/fr-https-longvdh3-us-central1-test-google-lab",
            "ip_address": "35.209.106.147",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "fr-https-longvdh3-us-central1-test-google-lab",
            "network": "https://www.googleapis.com/compute/v1/projects/adept-now-400809/global/networks/tf-mynetwork",
            "network_tier": "STANDARD",
            "port_range": "443-443",
            "project": "adept-now-400809",
            "recreate_closed_psc": false,
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/adept-now-400809/regions/us-central1/forwardingRules/fr-https-longvdh3-us-central1-test-google-lab",
            "target": "https://www.googleapis.com/compute/beta/projects/adept-now-400809/regions/us-central1/targetHttpsProxies/thp-longvdh3-us-central1-test-google-lab"
          },
          "dependencies": [
            "module.compute_engine.google_compute_health_check.autohealing",
            "module.compute_engine.google_compute_region_autoscaler.instance",
            "module.compute_engine.google_compute_region_instance_group_manager.instance",
            "module.compute_engine.google_compute_region_instance_template.instance",
            "module.load_balancing.google_compute_region_backend_service.default",
            "module.load_balancing.google_compute_region_health_check.default",
            "module.load_balancing.google_compute_region_ssl_certificate.default",
            "module.load_balancing.google_compute_region_target_https_proxy.default",
            "module.load_balancing.google_compute_region_url_map.default",
            "module.network.google_compute_firewall.firewall",
            "module.network.google_compute_network.network",
            "module.network.google_compute_subnetwork.subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancing",
      "mode": "managed",
      "type": "google_compute_region_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/adept-now-400809/regions/us-central1/instanceGroups/igm-longvdh3-us-central1-test-google-lab",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0.8
              }
            ],
            "connection_draining_timeout_sec": 0,
            "creation_timestamp": "2023-11-12T22:14:01.405-08:00",
            "enable_cdn": false,
            "fingerprint": "vksCFXQJfeQ=",
            "health_checks": [
              "projects/adept-now-400809/regions/us-central1/healthChecks/healthcheck-longvdh3-us-central1-test-google-lab"
            ],
            "id": "projects/adept-now-400809/regions/us-central1/backendServices/backend-longvdh3-us-central1-test-google-lab",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "log_config": [
              {
                "enable": true,
                "sample_rate": 1
              }
            ],
            "name": "backend-longvdh3-us-central1-test-google-lab",
            "port_name": "http",
            "project": "adept-now-400809",
            "protocol": "HTTP",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/adept-now-400809/regions/us-central1/backendServices/backend-longvdh3-us-central1-test-google-lab",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "module.compute_engine.google_compute_health_check.autohealing",
            "module.compute_engine.google_compute_region_autoscaler.instance",
            "module.compute_engine.google_compute_region_instance_group_manager.instance",
            "module.compute_engine.google_compute_region_instance_template.instance",
            "module.load_balancing.google_compute_region_health_check.default",
            "module.network.google_compute_firewall.firewall",
            "module.network.google_compute_network.network",
            "module.network.google_compute_subnetwork.subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancing",
      "mode": "managed",
      "type": "google_compute_region_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-11-12T22:14:38.827-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/adept-now-400809/regions/us-central1/backendServices/backend-longvdh3-us-central1-test-google-lab",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "89EL_Xb6IQc=",
            "host_rule": [],
            "id": "projects/adept-now-400809/regions/us-central1/urlMaps/urlmap-longvdh3-us-central1-test-google-lab",
            "map_id": 2928722319507193889,
            "name": "urlmap-longvdh3-us-central1-test-google-lab",
            "path_matcher": [],
            "project": "adept-now-400809",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/adept-now-400809/regions/us-central1/urlMaps/urlmap-longvdh3-us-central1-test-google-lab",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute_engine.google_compute_health_check.autohealing",
            "module.compute_engine.google_compute_region_autoscaler.instance",
            "module.compute_engine.google_compute_region_instance_group_manager.instance",
            "module.compute_engine.google_compute_region_instance_template.instance",
            "module.load_balancing.google_compute_region_backend_service.default",
            "module.load_balancing.google_compute_region_health_check.default",
            "module.network.google_compute_firewall.firewall",
            "module.network.google_compute_network.network",
            "module.network.google_compute_subnetwork.subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "tf-allow-check-health",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-11-12T22:12:31.970-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/adept-now-400809/global/firewalls/tf-allow-check-health",
            "log_config": [],
            "name": "tf-allow-check-health",
            "network": "https://www.googleapis.com/compute/v1/projects/adept-now-400809/global/networks/tf-mynetwork",
            "priority": 1000,
            "project": "adept-now-400809",
            "self_link": "https://www.googleapis.com/compute/v1/projects/adept-now-400809/global/firewalls/tf-allow-check-health",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": [
              "allow-health-check"
            ],
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.network",
            "module.network.google_compute_subnetwork.subnetwork"
          ]
        },
        {
          "index_key": "tf-allow-proxy",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-11-12T22:12:31.868-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/adept-now-400809/global/firewalls/tf-allow-proxy",
            "log_config": [],
            "name": "tf-allow-proxy",
            "network": "https://www.googleapis.com/compute/v1/projects/adept-now-400809/global/networks/tf-mynetwork",
            "priority": 1000,
            "project": "adept-now-400809",
            "self_link": "https://www.googleapis.com/compute/v1/projects/adept-now-400809/global/firewalls/tf-allow-proxy",
            "source_ranges": [
              "10.129.0.0/23"
            ],
            "source_service_accounts": null,
            "source_tags": [
              "load-balanced-backend"
            ],
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.network",
            "module.network.google_compute_subnetwork.subnetwork"
          ]
        },
        {
          "index_key": "tf-allow-ssh",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-11-12T22:12:32.118-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/adept-now-400809/global/firewalls/tf-allow-ssh",
            "log_config": [],
            "name": "tf-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/adept-now-400809/global/networks/tf-mynetwork",
            "priority": 1000,
            "project": "adept-now-400809",
            "self_link": "https://www.googleapis.com/compute/v1/projects/adept-now-400809/global/firewalls/tf-allow-ssh",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": [
              "load-balanced-backend"
            ],
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.network",
            "module.network.google_compute_subnetwork.subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/adept-now-400809/global/networks/tf-mynetwork",
            "mtu": 0,
            "name": "tf-mynetwork",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "adept-now-400809",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/adept-now-400809/global/networks/tf-mynetwork"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "us-central1/proxy-only-subnet",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-11-12T22:12:17.619-08:00",
            "gateway_address": "10.129.0.1",
            "id": "projects/adept-now-400809/regions/us-central1/subnetworks/proxy-only-subnet",
            "ip_cidr_range": "10.129.0.0/23",
            "name": "proxy-only-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/adept-now-400809/global/networks/tf-mynetwork",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "adept-now-400809",
            "purpose": "REGIONAL_MANAGED_PROXY",
            "region": "us-central1",
            "role": "ACTIVE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/adept-now-400809/regions/us-central1/subnetworks/proxy-only-subnet"
          },
          "dependencies": [
            "module.network.google_compute_network.network"
          ]
        },
        {
          "index_key": "us-central1/subnet-01",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-11-12T22:12:17.698-08:00",
            "gateway_address": "10.1.2.1",
            "id": "projects/adept-now-400809/regions/us-central1/subnetworks/subnet-01",
            "ip_cidr_range": "10.1.2.0/24",
            "name": "subnet-01",
            "network": "https://www.googleapis.com/compute/v1/projects/adept-now-400809/global/networks/tf-mynetwork",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "adept-now-400809",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/adept-now-400809/regions/us-central1/subnetworks/subnet-01",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.network.google_compute_network.network"
          ]
        }
      ]
    }
  ]
}